update doc and add delete service
